--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Главная</title>
+	<title>Landing page Zoka</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
+	<meta name="description" content="Lorem ipsum dolor">
+	<meta name="keywords" content="Lorem ipsum dolor">
 	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.min.css?_v=20230102143400">
 	<link rel="shortcut icon" href="favicon.ico">
